finished rendering will try will more parts